messaging_app/messaging_app/blue_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: messaging-app-blue
  labels:
    app: messaging-app
    track: blue
spec:
  replicas: 2
  revisionHistoryLimit: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: messaging-app
      version: blue
  template:
    metadata:
      labels:
        app: messaging-app
        version: blue
    spec:
      containers:
        - name: web
          image: ghcr.io/YOURUSER/messaging-app:2.0
          ports:
            - containerPort: 8000
          readinessProbe:
            httpGet: { path: "/", port: 8000 }
          livenessProbe:
            httpGet: { path: "/", port: 8000 }
