messaging_app/messaging_app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: messaging-app
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: messaging.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: messaging-app
                port:
                  number: 8000
